Day 17 - second - save work of refactor to int model